<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Trabalho5_LayoutApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_linear">LinearActivity</string>
    <string name="title_activity_grid">GridActivity</string>
    <string name="layout_option">Trabalho 5 - Layouts</string>   
    <string name="um">1</string>
    <string name="bt_enter">Enter</string>
    <string name="bt_plus_minus">+/-</string>
    <string name="bt_div">/</string>
    <string name="bt_seven">7</string>
    <string name="bt_eight">8</string>
    <string name="bt_nine">9</string>
    <string name="bt_mult">*</string>
    <string name="bt_six">6</string>
    <string name="bt_five">5</string>
    <string name="bt_four">4</string>
    <string name="bt_minus">-</string>
    <string name="bt_one">1</string>
    <string name="bt_two">2</string>
    <string name="bt_three">3</string>
    <string name="bt_plus">+</string>
    <string name="bt_zero">0</string>
    <string name="bt_dot">.</string>
    <string name="bt_clx">clx</string>
    <string name="bt_bksp">&lt;--</string>
    <string name="tv_dev_by">Desenvolvido por Filipe e Michael</string>
    <string name="tv_input">Visor</string>
    <string name="title_activity_relative">RelativeActivity</string>
    <string name="bt_text_linear">Linear Layout</string>
    <string name="bt_text_grid">Grid Layout</string>
    <string name="bt_text_relative">Relative Layout</string>

</resources>
