<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout1"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#ddd"
    android:columnCount="@integer/int_col"
    android:numColumns="@integer/int_col"
    android:orientation="horizontal"
    android:paddingLeft="45dp"
    android:paddingRight="45dp"
    android:rowCount="@integer/int_row"
    android:scaleX="1.3"
    tools:context="${relativePackage}.${activityClass}" >
    
      <TextView
          android:id="@+id/textView1"
          android:layout_width="match_parent"
          android:layout_height="110dp"
          android:layout_columnSpan="@integer/int_colspan"
          android:layout_gravity="center"
          android:background="#eee"
          android:gravity="center"
          android:hint="@string/tv_input"
          android:minWidth="284dp"
          android:textAppearance="?android:attr/textAppearanceLarge" />
    
      <Button
          android:id="@+id/button_enter"
          style="@style/btFuncStyle"
          android:layout_width="133dp"
          android:layout_column="0"
          android:layout_columnSpan="2"
          android:layout_margin="3dp"
          android:layout_marginBottom="10dp"
          android:layout_marginTop="10dp"
          android:layout_row="1"
          android:text="@string/bt_enter" />

        <Button
            android:id="@+id/button_plus_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/btFuncStyle"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_margin="3dp"
            android:text="@string/bt_plus_minus" />

        <Button
            android:id="@+id/button_div"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/btFuncStyle"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_margin="3dp"
            android:text="@string/bt_div" />
        
        <Button
            android:id="@+id/button_7"
            style="@style/btNumberStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_margin="3dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_row="2"
            android:text="@string/bt_seven" />

        <Button
            android:id="@+id/button_8"
            style="@style/btNumberStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_margin="3dp"
            android:text="@string/bt_eight" />

        <Button
            android:id="@+id/button_9"
            style="@style/btNumberStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_margin="3dp"
            android:text="@string/bt_nine" />
        
         <Button
             android:id="@+id/button_mult"
             style="@style/btFuncStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_margin="3dp"
             android:text="@string/bt_mult" />
         
          <Button
            android:id="@+id/button_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/btNumberStyle"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_margin="3dp"
            android:text="@string/bt_four" />

        <Button
            android:id="@+id/button_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/btNumberStyle"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_margin="3dp"
            android:text="@string/bt_five" />

        <Button
            android:id="@+id/button_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/btNumberStyle"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_margin="3dp"
            android:text="@string/bt_six" />

        <Button
            android:id="@+id/button_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/btFuncStyle"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_margin="3dp"
            android:text="@string/bt_minus" />
        
          <Button
            android:id="@+id/button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/btNumberStyle"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_margin="3dp"
            android:text="@string/bt_one" />

        <Button
            android:id="@+id/button_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/btNumberStyle"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_margin="3dp"
            android:text="@string/bt_two" />

        <Button
            android:id="@+id/button_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/btNumberStyle"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_margin="3dp"
            android:text="@string/bt_three" />

        <Button
            android:id="@+id/button_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/btFuncStyle"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_margin="3dp"
            android:text="@string/bt_plus" />
        
         <Button
            android:id="@+id/button_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/btNumberStyle"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_margin="3dp"
            android:text="@string/bt_zero" />

        <Button
            android:id="@+id/button_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/btFuncStyle"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_margin="3dp"
            android:text="@string/bt_dot" />

        <Button
            android:id="@+id/button_clx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/btFuncStyle"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_margin="3dp"
            android:text="@string/bt_clx" />

        <Button
            android:id="@+id/button_bksp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/btFuncStyle"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_margin="3dp"
            android:text="@string/bt_bksp" />

</GridLayout>
